--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>唯一ID</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>唯一ID - 登录</title>
   </head>
   <body>
     <div id="app"></div>
