--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>唯一ID - 登录</title>
+    <title>唯ID - 简单、可信赖的手机号验证服务</title>
   </head>
   <body>
     <div id="app"></div>
