为3个场景优化；不再适配移动端；暗色主题不再反色 而只是调暗一点；去掉前端表单校验；其他小修改

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>唯ID - 简单、可信赖的手机号验证服务</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <title>唯ID</title>
   </head>
   <body>
     <div id="app"></div>
