--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <script src="%PUBLIC_URL%/load-image.all.min.js" ></script>
+    <script src="https://www.onlyid.net/static/js/load-image.all.min.js" ></script>
     <script src="%PUBLIC_URL%/qrcode.min.js" ></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
