--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <script src="https://www.onlyid.net/static/js/load-image.all.min.js" ></script>
     <script src="%PUBLIC_URL%/qrcode.min.js" ></script>
+    <script src="%PUBLIC_URL%/gt.js" ></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
