--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="minimum-scale=1, width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="唯ID 认证中心"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <script src="https://www.onlyid.net/static/js/load-image.all.min.js" ></script>
-    <script src="%PUBLIC_URL%/qrcode.min.js" ></script>
-    <script src="%PUBLIC_URL%/gt.js" ></script>
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="description" content="唯ID 认证中心" />
+    <script src="https://registry.npmmirror.com/blueimp-load-image/5.16.0/files/js/load-image.all.min.js"></script>
+    <script src="%PUBLIC_URL%/qrcode.min.js"></script>
+    <script src="%PUBLIC_URL%/gt.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
